--- a/.github/workflows/commitCheck.yml
+++ b/.github/workflows/commitCheck.yml
@@ -25,4 +25,5 @@ jobs:
         if: "!contains(github.event.head_commit.message, '():'"
         steps:
           - name : Fail Commit Message Check
+            run: exit 1
             error: 'Your commit message has to contain similar syntax "fix():" or "feat():".'
