test[+semver: minor]

--- a/.github/workflows/commitCheck.yml
+++ b/.github/workflows/commitCheck.yml
@@ -17,11 +17,18 @@ on:
       - main
 
 jobs:
-  check-commit-message:
+  verify-commit-message:
     if: "contains(github.event.head_commit.message, '():')"
     name: Check Commit Message
     runs-on: ubuntu-latest
     steps:
       - name: Check Commit Type
         run: true
+  reject-commit-message:
+    if: "!contains(github.event.head_commit.message, '():')"
+    name: Reject Commit Message
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check Commit Type
+        run: exit 1
 #test
