--- a/.github/workflows/commitCheck.yml
+++ b/.github/workflows/commitCheck.yml
@@ -15,7 +15,7 @@ on:
 
 jobs:
   verify-commit-message:
-    if: "contains(github.event.head_commit.message, '():')"
+    if: "contains(github.event.head_commit.message, '[():]')"
     name: Check Commit Message
     runs-on: ubuntu-latest
     steps:
