--- a/.github/workflows/commitCheck.yml
+++ b/.github/workflows/commitCheck.yml
@@ -14,8 +14,8 @@ on:
       - synchronize
 
 jobs:
-  verify-commit-message:
-    if: "contains(github.event.head_commit.message, '[():]')"
+  check-commit-message:
+    if: "contains(github.event.head_commit.message, '():')"
     name: Check Commit Message
     runs-on: ubuntu-latest
     steps:
