--- a/.github/workflows/commitCheck.yml
+++ b/.github/workflows/commitCheck.yml
@@ -13,6 +13,6 @@ jobs:
     runs-on: [ ubuntu-latest ]
     steps:
       - name: Commit Message Check
-        if: contains(github.event.head_commit.message, '():')
+        if: !contains(github.event.head_commit.message, '():')
         run: exit 1
         error: 'Your commit message has to contain similar syntax "fix():" or "feat():".'
