--- a/.github/workflows/commitCheck.yml
+++ b/.github/workflows/commitCheck.yml
@@ -7,6 +7,6 @@ jobs:
    runs-on: [ ubuntu-latest ]
    steps:
      - name: Commit Message Check
-       if: contains(github.event.head_commit.message, '():')
+       if: contains(github.event.pull_request.head.sha, '():')
        run: |
          echo 'Verifying Commit Message ${github.event.head_commit.message}!'
