--- a/.github/workflows/commitCheck.yml
+++ b/.github/workflows/commitCheck.yml
@@ -1,12 +1,28 @@
-name: Commit Message Check
+name: 'Commit Message Check'
 on:
   pull_request:
+    types:
+      - opened
+      - edited
+      - reopened
+      - synchronize
 
 jobs:
- Commit-Message-Confirm:
-   runs-on: [ ubuntu-latest ]
-   steps:
-     - name: Commit Message Check
-       if: contains(github.event.pull_request.head.sha, '():')
-       run: |
-         echo 'Verifying Commit Message ${github.event.head_commit.message}!'
+  check-commit-message:
+    name: Check Commit Message
+    runs-on: ubuntu-latest
+    steps:
+      - name: Get PR Commits
+        id: 'get-pr-commits'
+        uses: tim-actions/get-pr-commits@master
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Check Fixes
+        if: ${{ success() || failure() }}
+        uses: tim-actions/commit-message-checker-with-regex@v0.3.1
+        with:
+          commits: ${{ steps.get-pr-commits.outputs.commits }}
+          pattern: '\s*feats():\s*:?\s*(#\d+|github\.com\/kata-containers\/[a-z-.]*#\d+)'
+          error: 'No "Fixes" found'
+          one_pass_all_pass: 'true'
