--- a/.github/workflows/commitCheck.yml
+++ b/.github/workflows/commitCheck.yml
@@ -1,28 +1,18 @@
 name: 'Commit Message Check'
 on:
   pull_request:
-    types:
-      - opened
-      - edited
-      - reopened
-      - synchronize
+  push:
+    branches:
+      - main
 
 jobs:
   check-commit-message:
     name: Check Commit Message
     runs-on: ubuntu-latest
     steps:
-      - name: Get PR Commits
-        id: 'get-pr-commits'
-        uses: tim-actions/get-pr-commits@master
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Check Fixes
-        if: ${{ success() || failure() }}
-        uses: tim-actions/commit-message-checker-with-regex@v0.3.1
-        with:
-          commits: ${{ steps.get-pr-commits.outputs.commits }}
-          pattern: '\s*feats():\s*:?\s*(#\d+|github\.com\/kata-containers\/[a-z-.]*#\d+)'
-          error: 'No "Fixes" found'
-          one_pass_all_pass: 'true'
+      - name: Check Commit Type
+          uses: gsactions/commit-message-checker@v1
+          with:
+            pattern: '(feat\(\):)|(fix\(\)):|(patch\(\)):'
+            flags: 'gm'
+            error: 'Your first line has to contain a commit type like "feat(): or fix():".'
