--- a/.github/workflows/RemoteCommitCheck.yml
+++ b/.github/workflows/RemoteCommitCheck.yml
@@ -5,7 +5,7 @@ name: Remote Commit Check workflow
 # Controls when the workflow will run
 on:
   repository_dispatch:
-  push:
+  pull_request:
     branches:
       - "master"
 
