--- a/.github/workflows/RemoteVersioning.yml
+++ b/.github/workflows/RemoteVersioning.yml
@@ -5,10 +5,7 @@ name: Remote Commit Check workflow
 # Controls when the workflow will run
 on:
   repository_dispatch:
-  workflow_call:
-  push:
-    branches:
-      - "master"
+  pull_request:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
