--- a/.github/workflows/RemoteVersioning.yml
+++ b/.github/workflows/RemoteVersioning.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Remote Commit Check workflow
+name: Remote Versioning workflow
 
 # Controls when the workflow will run
 on:
