--- a/renovate.json
+++ b/renovate.json
@@ -8,7 +8,8 @@
     "fileMatch": ["^terragrunt/.*\\.hcl$"]
   },
 
-  "regexManagers": {
+  "regexManagers": [
+  {
     "fileMatch": ["^terragrunt/.*\\.hcl$"],
     "matchStringsStrategy": "any",
     "matchStrings": [
@@ -18,4 +19,5 @@
       ],
       "datasourceTemplate": "terragrunt"
     }
+  ]
 }
