--- a/renovate.json
+++ b/renovate.json
@@ -15,7 +15,7 @@
     "matchStrings": [
       "revision =(?<currentValue>.*?)\\n"
       ],
-      "depNameTemplate": "appdynamics",
+      "depNameTemplate": "gruntwork-io/terragrunt",
       "datasourceTemplate": "terragrunt"
     }
   ]
