--- a/renovate.json
+++ b/renovate.json
@@ -5,7 +5,7 @@
   ],
 
   "terragrunt": {
-    "fileMatch": ["^terragrunt/.*\\.hcl$"]
+    "fileMatch": ["terragrunt.hcl$"],
   },
 
   "regexManagers": [
