adding editing filematch

--- a/renovate.json
+++ b/renovate.json
@@ -3,13 +3,17 @@
   "extends": [
     "config:base"
   ],
-  
+
+  "terragrunt": {
+    "fileMatch": ["^terragrunt/.*\\.hcl$"]
+  },
+
   "regexManagers": [
     {
       "description": "Update custom tag",
       "fileMatch": [".hcl$"],
       "matchStrings": [
-        "revision = \"(?<currentValue>.*?)\" # (?<datasource>.*?)/(?<depName>.*?)\\s"
+        "revision = \"(?<currentValue>.*?)\""
       ],
       "depNameTemplate": "TOwens1987/GitVersioning",
       "datasourceTemplate": "github-releases"
