--- a/renovate.json
+++ b/renovate.json
@@ -15,7 +15,7 @@
       "matchStrings": [
         "revision = \"(?<currentValue>.*?)\""
       ],
-      "depNameTemplate": "TOwens1987/GitVersioning",
+      "depName": "TOwens1987/GitVersioning",
       "datasourceTemplate": "github-releases"
     }
   ]
