--- a/renovate.json
+++ b/renovate.json
@@ -9,7 +9,7 @@
       "description": "Update HCL Plugins",
       "fileMatch": [".hcl$"],
       "matchStrings": [
-        "revision =\\s\\\"(?<currentValue>.*\\d)"
+        "revision =\\s\"(?<currentValue>.*\\d)"
       ],
       "datasourceTemplate": "github-releases",
       "packageNameTemplate": "TOwens1987/GitVersioning",
