--- a/renovate.json
+++ b/renovate.json
@@ -14,6 +14,7 @@
       "datasourceTemplate": "github-releases",
       "packageNameTemplate": "TOwens1987/GitVersioning",
       "depNameTemplate": "GitVersioning Update",
+      "extractVersionTemplate": "^(?<version>.*)$",
       "versioningTemplate": "semver"
     }
   ]
