testing multiple repos updating

--- a/renovate.json
+++ b/renovate.json
@@ -10,11 +10,23 @@
       "description": "Update HCL Plugins",
       "fileMatch": [".hcl$"],
       "matchStrings": [
-        "name\\s*=\\s\"(?<nameoftool>.*)\"\n\\s*enabled\\s*=\\s\"true\"\\n\\s*revision\\s=\\s\"(?<currentValue>.*)\""
+        "name\\s*=\\s\"anothertool\"\\n\\s*enabled\\s*=\\s\"true\"\\n\\s*revision\\s=\\s\"(?<currentValue>.*)\""
       ],
       "datasourceTemplate": "github-releases",
-      "packageNameTemplate": "TOwens1987/{{nameoftool}}",
-      "depNameTemplate": "{{nameoftool}}-{{currentValue}}",
+      "packageNameTemplate": "TOwens1987/anothertool",
+      "depNameTemplate": "{{nameoftool}}",
+      "extractVersionTemplate": "^(?<version>.*)$",
+      "versioningTemplate": "semver"
+    },
+    {
+      "description": "Update HCL Plugins",
+      "fileMatch": [".hcl$"],
+      "matchStrings": [
+        "name\\s*=\\s\"testtool\"\\n\\s*enabled\\s*=\\s\"true\"\\n\\s*revision\\s=\\s\"(?<currentValue>.*)\""
+      ],
+      "datasourceTemplate": "github-releases",
+      "packageNameTemplate": "TOwens1987/anothertool",
+      "depNameTemplate": "{{nameoftool}}",
       "extractVersionTemplate": "^(?<version>.*)$",
       "versioningTemplate": "semver"
     }
