--- a/renovate.json
+++ b/renovate.json
@@ -22,7 +22,7 @@
       "description": "Update HCL Plugins",
       "fileMatch": [".hcl$"],
       "matchStrings": [
-        "name\\s*=\\s\"anothertool\"\\n\\s*enabled\\s*=\\s\"true\"\\n\\s*revision\\s=\\s\"(?<currentValue>.*)\""
+        "name\\s*=\\s\"testtool\"\\n\\s*enabled\\s*=\\s\"true\"\\n\\s*revision\\s=\\s\"(?<currentValue>.*)\""
       ],
       "datasourceTemplate": "github-releases",
       "packageNameTemplate": "TOwens1987/testtool",
