--- a/.github/workflows/RemoteVersioning.yml
+++ b/.github/workflows/RemoteVersioning.yml
@@ -4,7 +4,7 @@ on:
   workflow_call:
   push:
     branches:
-      - "master"
+      - "main"
     paths-ignore:
       - "README.adoc"
       - "docs/*"
