--- a/.github/workflows/RemoteVersioning.yml
+++ b/.github/workflows/RemoteVersioning.yml
@@ -2,9 +2,8 @@ name: Create New Tag
 
 on:
   workflow_call:
-  push:
-    branches:
-      - "main"
+  pull_request:
+    types: [closed]
     paths-ignore:
       - "README.adoc"
       - "docs/*"
