--- a/renovate.json
+++ b/renovate.json
@@ -5,7 +5,7 @@
   ],
   "enabledManagers": ["regex"],
   "branchPrefix": ["release/"],
-  "prBodyTemplate": "{{{table}}}{{{notes}}}",
+  "prBodyTemplate": "{{{table}}}{{{prBodyNotes}}}",
 
   "regexManagers": [
     {
