--- a/renovate.json
+++ b/renovate.json
@@ -3,6 +3,7 @@
   "extends": [
     "config:base"
   ],
+  "ignoreUnstable": false,
   "enabledManagers": ["regex"],
   "branchPrefix": ["release/"],
   "prBodyTemplate": "{{{table}}}{{{notes}}}{{{changelogs}}}{{{footer}}}",
