--- a/.github/workflows/RemoteVersioning.yml
+++ b/.github/workflows/RemoteVersioning.yml
@@ -3,7 +3,7 @@ name: Create New Tag
 on:
   workflow_call:
   pull_request:
-    
+
 jobs:
   Tagging:
     runs-on: ubuntu-latest
@@ -37,7 +37,7 @@ jobs:
 
 
       - name: hotfix-tag
-        if: (contains(github.event.pull_request.labels.*.name, 'hotfix') || contains(github.event.pull_request.labels.*.name, 'fix') || contains(github.event.pull_request.labels.*.name, 'bug')) and github.event.pull_request.merged == true
+        if: (contains(github.event.pull_request.labels.*.name, 'hotfix') || contains(github.event.pull_request.labels.*.name, 'fix') || contains(github.event.pull_request.labels.*.name, 'bug')) && github.event.pull_request.merged == true
         id: tag_version2
         uses: mathieudutour/github-tag-action@v6.0
         with:
