--- a/renovate.json
+++ b/renovate.json
@@ -7,6 +7,7 @@
   "enabledManagers": ["regex"],
   "branchPrefix": ["release/"],
   "prBodyTemplate": "{{{table}}}{{{notes}}}{{{changelogs}}}{{{footer}}}",
+  "labels": ["pre-release"],
 
   "regexManagers": [
     {
