--- a/.github/workflows/RemoteVersioning.yml
+++ b/.github/workflows/RemoteVersioning.yml
@@ -3,7 +3,7 @@ name: Create New Tag
 on:
   workflow_call:
   pull_request:
-    types: [created, closed]
+    types: [opened, closed]
 
 jobs:
   Tagging:
