--- a/.github/workflows/RemoteVersioning.yml
+++ b/.github/workflows/RemoteVersioning.yml
@@ -27,7 +27,7 @@ jobs:
           tag_prefix: ""
 
       - name: release-tag
-        if: (contains(github.event.pull_request.labels.*.name, 'pre-release')  && github.head_ref == 'release/dev' && github.event.action != 'closed'))
+        if: (contains(github.event.pull_request.labels.*.name, 'pre-release')  && github.head_ref == 'release/testing-14.x' && github.event.action != 'closed'))
         id: tag_version3
         uses: mathieudutour/github-tag-action@v6.0
         with:
@@ -64,7 +64,7 @@ jobs:
           body: ${{ github.event.pull_request.body }}
 
       - name: Create a GitHub release for pre-release
-        if: (contains(github.event.pull_request.labels.*.name, 'pre-release') && github.head_ref == 'release/dev' && github.event.action != 'closed')
+        if: (contains(github.event.pull_request.labels.*.name, 'pre-release') && github.head_ref == 'release/testing-14.x' && github.event.action != 'closed')
         uses: ncipollo/release-action@v1
         with:
           tag: ${{ steps.tag_version3.outputs.new_tag }}
