--- a/.github/workflows/RemoteVersioning.yml
+++ b/.github/workflows/RemoteVersioning.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: quick check for acceptable merge branch
-        if: github.head_ref != 'release/testing-14.x' || ${{ !contains(github.event.pull_request.labels.*.name, 'feature') && !contains(github.event.pull_request.labels.*.name, 'bug') && !contains(github.event.pull_request.labels.*.name, 'hotfix')  }}
+        if: github.head_ref != 'release/testing-14.x'
         run: | 
               echo "::error ::Your branch you are working out of is not compatible with the automation of tag creation and versioning. Please use an approved branch like feature/, patch/, hotfix/, docs/ or bug/ so that it can get the appropriate label."
               exit 1
