--- a/.github/workflows/release-notes.yml
+++ b/.github/workflows/release-notes.yml
@@ -1,4 +1,4 @@
-name: Search Release Description
+name: Search Release Notes Description
 on:
   workflow_dispatch:
     inputs:
@@ -8,13 +8,14 @@ on:
       release:
         description: 'The ID or tag of the release to search in.'
         required: true
+
 jobs:
   search:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-      - name: Search release description
+      - name: Search release notes description
         run: |
-          RELEASE_BODY=$(curl -s https://api.github.com/repos/${{ github.event.inputs.repo }}/releases/${{ github.event.inputs.release }} | jq -r '.body')
-          echo "${RELEASE_BODY}" | grep -E -i "Description\s+([^<]+)" -o | sed 's/Description\s*//g'
+          RELEASE_NOTES=$(curl -s https://api.github.com/repos/${{ github.event.inputs.repo }}/releases/${{ github.event.inputs.release }} | jq -r '.body')
+          echo "${RELEASE_NOTES}" | grep -E -i "Description\s+([^>]+)" -o | sed 's/Description\s*//g'
