--- a/.github/workflows/RemoteVersioning.yml
+++ b/.github/workflows/RemoteVersioning.yml
@@ -2,6 +2,8 @@ name: Create New Tag
 
 on:
   workflow_call:
+  push:
+    - release/dev
   pull_request:
     types: [opened, closed]
     branches:
@@ -61,10 +63,9 @@ jobs:
           body: ${{ github.event.pull_request.body }}
 
       - name: Create a GitHub release for pre-release
-        if: (github.head_ref == 'release/testing-16.x' && github.event.action != 'closed')
-        uses: ncipollo/release-action@v1
+        if: (github.head_ref == 'release/dev' && github.event.action != 'closed')
+        uses: release-drafter/release-drafter@v5.23.0
         with:
-          tag: ${{ steps.tag_version3.outputs.new_tag }}
-          name: Release ${{ steps.tag_version3.outputs.new_tag }}
-          body: ${{ github.event.pull_request.body }}
           prerelease: "true"
+          commitish: refs/heads/release/dev
+          publish: "true"
