--- a/.github/workflows/RemoteVersioning.yml
+++ b/.github/workflows/RemoteVersioning.yml
@@ -3,7 +3,8 @@ name: Create New Tag
 on:
   workflow_call:
   push:
-    - release/dev
+    branches:
+      - release/dev
   pull_request:
     types: [opened, closed]
     branches:
