--- a/.github/workflows/RemoteVersioning.yml
+++ b/.github/workflows/RemoteVersioning.yml
@@ -8,12 +8,16 @@ on:
   pull_request:
     types: [opened, closed]
 
+permissions: read
+
 jobs:
   Tagging:
+    permissions:
+      contents: write
+      pull-requests: write
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-
       - name: minor-tag
         if: contains(github.event.pull_request.labels.*.name, 'feature') && github.event.pull_request.merged == true
         id: tag_version1
@@ -25,7 +29,7 @@ jobs:
           tag_prefix: ""
 
       - name: release-tag
-        if: (github.head_ref == 'release/testing-16.x' && github.event.action != 'closed')
+        if: (github.head_ref == 'release/dev' && github.event.action != 'closed')
         id: tag_version3
         uses: mathieudutour/github-tag-action@v6.0
         with:
