--- a/.github/workflows/RemoteVersioning.yml
+++ b/.github/workflows/RemoteVersioning.yml
@@ -73,3 +73,5 @@ jobs:
           prerelease: "true"
           commitish: refs/heads/release/dev
           publish: "true"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
