--- a/.github/workflows/RemoteVersioning.yml
+++ b/.github/workflows/RemoteVersioning.yml
@@ -6,7 +6,7 @@ on:
     branches:
       - release/dev
   pull_request:
-    types: [opened, closed]
+    types: [opened, closed, synchronize, edited]
 
 permissions:
   contents: read
@@ -66,8 +66,17 @@ jobs:
           name: Release ${{ steps.tag_version2.outputs.new_tag }}
           body: ${{ github.event.pull_request.body }}
 
+      - name: Create a GitHub pre-release
+        if: (github.head_ref == 'release/dev' && github.event.action == 'opened')
+        uses: ncipollo/release-action@v1
+        with:
+          tag: ${{ steps.tag_version2.outputs.new_tag }}
+          name: Release ${{ steps.tag_version2.outputs.new_tag }}
+          body: ${{ github.event.pull_request.body }}
+          prerelease: "true"
+
       - name: Create a GitHub release for pre-release
-        if: (github.head_ref == 'release/dev' && github.event.action != 'closed')
+        if: (github.head_ref == 'release/dev' && github.event.action != 'closed' && github.event.action != 'opened')
         uses: release-drafter/release-drafter@v5.23.0
         with:
           prerelease: "true"
