--- a/.github/workflows/RemoteVersioning.yml
+++ b/.github/workflows/RemoteVersioning.yml
@@ -30,7 +30,7 @@ jobs:
           tag_prefix: ""
 
       - name: release-tag
-        if: (github.head_ref == 'release/dev' && github.event.action != 'closed')
+        if: (github.head_ref == 'release/dev' && github.event.action == 'opened')
         id: tag_version3
         uses: mathieudutour/github-tag-action@v6.0
         with:
