--- a/.github/workflows/RemoteVersioning.yml
+++ b/.github/workflows/RemoteVersioning.yml
@@ -26,17 +26,6 @@ jobs:
           create_annotated_tag: true
           tag_prefix: ""
 
-      - name: release-tag
-        if: (github.head_ref == 'release/dev' && github.event.action == 'opened')
-        id: tag_version3
-        uses: mathieudutour/github-tag-action@v6.0
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          default_bump: minor
-          create_annotated_tag: true
-          tag_prefix: ""
-
-
       - name: hotfix-tag
         if: (contains(github.event.pull_request.labels.*.name, 'hotfix') || contains(github.event.pull_request.labels.*.name, 'fix') || contains(github.event.pull_request.labels.*.name, 'bug')) && github.event.pull_request.merged == true
         id: tag_version2
@@ -63,17 +52,8 @@ jobs:
           name: Release ${{ steps.tag_version2.outputs.new_tag }}
           body: ${{ github.event.pull_request.body }}
 
-      - name: Create a GitHub pre-release
-        if: (github.head_ref == 'release/dev' && github.event.action == 'opened')
-        uses: ncipollo/release-action@v1
-        with:
-          tag: ${{ steps.tag_version3.outputs.new_tag }}
-          name: Release ${{ steps.tag_version3.outputs.new_tag }}
-          body: ${{ github.event.pull_request.body }}
-          prerelease: "true"
-
       - name: Create a GitHub release for pre-release
-        if: (github.head_ref == 'release/dev' && github.event.action != 'closed' && github.event.action != 'opened')
+        if: (github.head_ref == 'release/dev' && github.event.action != 'closed')
         uses: release-drafter/release-drafter@v5.23.0
         with:
           prerelease: "true"
