--- a/.github/workflows/RemoteVersioning.yml
+++ b/.github/workflows/RemoteVersioning.yml
@@ -2,12 +2,9 @@ name: Create New Tag
 
 on:
   workflow_call:
+  push:
   pull_request:
     types: [opened, closed, synchronize, edited]
-
-permissions:
-  contents: read
-
 jobs:
   Tagging:
     permissions:
@@ -19,17 +16,28 @@ jobs:
       - name: minor-tag
         if: contains(github.event.pull_request.labels.*.name, 'feature') && github.event.pull_request.merged == true
         id: tag_version1
-        uses: mathieudutour/github-tag-action@v6.0
+        uses: mathieudutour/github-tag-action@v6.1
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           default_bump: minor
           create_annotated_tag: true
           tag_prefix: ""
 
+      - name: release-tag
+        if: (github.head_ref == 'release/dev' && github.event.action != 'closed')
+        id: tag_version3
+        uses: mathieudutour/github-tag-action@v6.1
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          default_bump: minor
+          create_annotated_tag: true
+          tag_prefix: ""
+
+
       - name: hotfix-tag
         if: (contains(github.event.pull_request.labels.*.name, 'hotfix') || contains(github.event.pull_request.labels.*.name, 'fix') || contains(github.event.pull_request.labels.*.name, 'bug')) && github.event.pull_request.merged == true
         id: tag_version2
-        uses: mathieudutour/github-tag-action@v6.0
+        uses: mathieudutour/github-tag-action@v6.1
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           default_bump: patch
@@ -52,12 +60,29 @@ jobs:
           name: Release ${{ steps.tag_version2.outputs.new_tag }}
           body: ${{ github.event.pull_request.body }}
 
-      - name: Create a GitHub release for pre-release
+      - name: Create a GitHub release for release bump
         if: (github.head_ref == 'release/dev' && github.event.action != 'closed')
-        uses: release-drafter/release-drafter@v5.23.0
+        uses: ncipollo/release-action@v1
         with:
-          prerelease: "true"
-          commitish: refs/heads/release/dev
-          publish: "true"
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          tag: ${{ steps.tag_version3.outputs.new_tag }}
+          name: Release ${{ steps.tag_version3.outputs.new_tag }}
+          body: ${{ github.event.pull_request.body }}
+
+      - name: dryrun-tag
+        if:  (github.head_ref == 'release/dev' && (github.event.action == 'synchronize' || github.event.action == 'edited')
+        id: tag_version4
+        uses: mathieudutour/github-tag-action@v6.1
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          default_bump: minor
+          create_annotated_tag: true
+          tag_prefix: ""
+          dry_run: "true"
+
+      - name: Modify a GitHub release for release bump
+        if: (github.head_ref == 'release/dev' && (github.event.action == 'synchronize' || github.event.action == 'edited')
+        uses: ncipollo/release-action@v1
+        with:
+          tag: ${{ steps.tag_version4.outputs.previous_tag }}
+          name: Release ${{ steps.tag_version3.outputs.previous_tag }}
+          body: ${{ github.event.pull_request.body }}
