--- a/.github/workflows/RemoteVersioning.yml
+++ b/.github/workflows/RemoteVersioning.yml
@@ -24,7 +24,7 @@ jobs:
           tag_prefix: ""
 
       - name: release-tag
-        if: (github.head_ref == 'release/dev' && github.event.action != 'closed')
+        if: (github.head_ref == 'release/dev' && github.event.action == 'opened')
         id: tag_version3
         uses: mathieudutour/github-tag-action@v6.1
         with:
@@ -61,7 +61,7 @@ jobs:
           body: ${{ github.event.pull_request.body }}
 
       - name: Create a GitHub release for release bump
-        if: (github.head_ref == 'release/dev' && github.event.action != 'closed')
+        if: (github.head_ref == 'release/dev' && github.event.action == 'opened')
         uses: ncipollo/release-action@v1
         with:
           tag: ${{ steps.tag_version3.outputs.new_tag }}
