--- a/.github/workflows/remoteVersioning2.yml
+++ b/.github/workflows/remoteVersioning2.yml
@@ -18,9 +18,9 @@ jobs:
         id: determine-bump
         run: |
           if [[ "${{ (contains(github.event.pull_request.labels.*.name, 'feature') || (github.head_ref == 'release/dev')) }}" ]]; then
-            echo "minor" 
+            echo -n "minor" 
           else
-            echo "patch"
+            echo -n "patch"
           fi
         env:
           DEFAULT_BUMP: ${{ steps.determine-bump.outputs.stdout }}
@@ -29,24 +29,12 @@ jobs:
         id: determine-run
         run: |
           if [[ "${{ ((github.head_ref == 'release/dev' && github.event.action == 'opened')) || (github.event.pull_request.merged == true)   }}" ]]; then
-            echo "false" 
+            echo -n "false" 
           else
-            echo "true"
+            echo -n "true"
           fi
         env:
           DEFAULT_RUN: ${{ steps.determine-run.outputs.stdout }}
-
-      - name: Determine default tag to use
-        id: determine-tag
-        run: |
-          if [[ "${{ (github.head_ref == 'release/dev' && github.event.action == 'synchronize') }}" ]]; then
-            echo "${{ steps.determine-tag.outputs.previous_tag }}" 
-          else
-            echo "${{ steps.determine-tag.outputs.new_tag }}"
-          fi
-        env:
-          DEFAULT_TAG: ${{ steps.determine-tag.outputs.stdout }}
-
 
       - name: Create Tag
         id: create-tag
@@ -57,6 +45,17 @@ jobs:
           create_annotated_tag: true
           tag_prefix: ""
           dry_run: ${{ env.DEFAULT_RUN }}
+
+      - name: Determine default tag to use
+        id: determine-tag
+        run: |
+          if [[ "${{ (github.head_ref == 'release/dev' && github.event.action == 'synchronize') }}" ]]; then
+            echo -n "${{ steps.determine-tag.outputs.previous_tag }}" 
+          else
+            echo -n "${{ steps.determine-tag.outputs.new_tag }}"
+          fi
+        env:
+          DEFAULT_TAG: ${{ steps.determine-tag.outputs.stdout }}
 
       - name: GitHub Release Creation and Monitoring
         uses: ncipollo/release-action@v1
