--- a/.github/workflows/remoteVersioning2.yml
+++ b/.github/workflows/remoteVersioning2.yml
@@ -24,7 +24,7 @@ jobs:
           fi
         env:
           DEFAULT_BUMP: >-
-            ${{ steps.determine-bump.outputs.stdout }}
+            ${{ steps.determine-bump.outputs.stdout }} | sed -e 's/^[ \t]*//' }}
 
       - name: Determine Default dry-run
         id: determine-run
@@ -36,7 +36,7 @@ jobs:
           fi
         env:
           DEFAULT_RUN: >-
-            ${{ steps.determine-run.outputs.stdout }}
+            ${{ steps.determine-run.outputs.stdout }} | sed -e 's/^[ \t]*//' }}
 
       - name: Create Tag
         id: create-tag
@@ -58,7 +58,7 @@ jobs:
           fi
         env:
           DEFAULT_TAG: >-
-            ${{ steps.determine-tag.outputs.stdout }}
+            ${{ steps.determine-tag.outputs.stdout }} | sed -e 's/^[ \t]*//' }}
 
       - name: GitHub Release Creation and Monitoring
         uses: ncipollo/release-action@v1
